--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "validator": "^8.1.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
